--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:800|Playfair+Display" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
   <!-- <link rel="shortcut icon" type="image/png" href="img/favicon.png"> -->
 
@@ -12,7 +13,52 @@
 </head>
 
 <body>
- 
+  <header class="header">
+    <div class="header__container">
+      <a href="https://www.antonzimnitski.com/" class="header__logo-box">
+        <img src="img/logo.svg" alt="Anton Zimnitski logo" class="header__logo">
+      </a>
+
+      <nav class="header__nav nav">
+        <button class="nav__button" id="toogle">
+          <svg class="nav__open-icon" viewBox="0 0 30 17">
+            <rect y="1" width="30" height="2" />
+            <rect y="7" width="30" height="2" />
+            <rect y="13" width="30" height="2" />
+          </svg>
+
+          <svg class="nav__close-icon" x="0px" y="0px" viewBox="0 0 30 17">
+            <g transform="translate(-15 -15)">
+              <polygon points="31.2,23.5 37,29.3 35.8,30.5 30,24.7 24.2,30.5 23,29.3 28.8,23.5 23,17.7 24.2,16.5 30,22.3 
+   35.8,16.5 37,17.7" />
+            </g>
+          </svg>
+        </button>
+
+        <ul class="nav__list">
+          <li class="nav__item">
+            <a href="#" class="nav__link">Home</a>
+          </li>
+          <li class="nav__item">
+            <a href="#" class="nav__link">About</a>
+          </li>
+          <li class="nav__item">
+            <a href="#" class="nav__link">Projects</a>
+          </li>
+          <li class="nav__item">
+            <a href="#" class="nav__link">Contacts</a>
+          </li>
+        </ul>
+
+      </nav>
+    </div>
+  </header>
+
+
+
+
+
+  <script src="js/scripts.js"></script>
 
 </body>
 
