--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
 
       <nav class="header__nav nav">
         <button class="nav__button" id="toogle">
-          <svg class="nav__open-icon" viewBox="0 0 30 17">
+          <svg class="nav__open-icon" width="30" height="17" viewBox="0 0 30 17">
             <rect y="1" width="30" height="2" />
             <rect y="7" width="30" height="2" />
             <rect y="13" width="30" height="2" />
           </svg>
 
-          <svg class="nav__close-icon" x="0px" y="0px" viewBox="0 0 30 17">
+          <svg class="nav__close-icon" width="30" height="17" viewBox="0 0 30 17">
             <g transform="translate(-15 -15)">
               <polygon points="31.2,23.5 37,29.3 35.8,30.5 30,24.7 24.2,30.5 23,29.3 28.8,23.5 23,17.7 24.2,16.5 30,22.3 
    35.8,16.5 37,17.7" />
@@ -54,9 +54,14 @@
     </div>
   </header>
 
-
-
-
+  <section class="hero">
+    <div class="hero__text-box">
+      <h1 class="heading-primary">
+        <span class="heading-primary--main">Anton Zimnitski</span>
+        <span class="heading-primary--sub">Full-Stack Javascript Developer</span>
+      </h1>
+    </div>
+  </section>
 
   <script src="js/scripts.js"></script>
 
