Add About section

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
   <header class="header">
-    <div class="header__container">
+    <div class="header__container u-center-block">
       <a href="https://www.antonzimnitski.com/" class="header__logo-box">
         <img src="img/logo.svg" alt="Anton Zimnitski logo" class="header__logo">
       </a>
@@ -37,10 +37,10 @@
 
         <ul class="nav__list">
           <li class="nav__item">
-            <a href="#" class="nav__link">Home</a>
+            <a href="#hero" class="nav__link">Home</a>
           </li>
           <li class="nav__item">
-            <a href="#" class="nav__link">About</a>
+            <a href="#about" class="nav__link">About</a>
           </li>
           <li class="nav__item">
             <a href="#" class="nav__link">Projects</a>
@@ -54,12 +54,25 @@
     </div>
   </header>
 
-  <section class="hero">
+  <section class="hero" id="hero">
     <div class="hero__text-box">
       <h1 class="heading-primary">
         <span class="heading-primary--main">Anton Zimnitski</span>
         <span class="heading-primary--sub">Full-Stack Javascript Developer</span>
       </h1>
+    </div>
+  </section>
+
+  <section class="about u-center-block" id="about">
+    <div class="u-center-text">
+      <div class="u-margin-bottom-small">
+        <h2 class="heading-secondary">About</h2>
+      </div>
+      <p class="paragraph">
+        My name is Anton Zimnitski and I am a Full-Stack developer from Belarus. I have experience in Test Automation and remote
+        work. I can work with the same efficiency alone (with minimal supervision) or as part of a team. In my spare time,
+        I teach myself different skills, keep up with the news in the Web industry, grow my beard, and listen to podcasts.
+      </p>
     </div>
   </section>
 
