--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
   <header class="header">
-    <div class="header__container u-center-block">
+    <div class="header__wrapper u-container">
       <a href="https://www.antonzimnitski.com/" class="header__logo-box">
         <img src="img/logo.svg" alt="Anton Zimnitski logo" class="header__logo">
       </a>
@@ -43,7 +43,7 @@
             <a href="#about" class="nav__link">About</a>
           </li>
           <li class="nav__item">
-            <a href="#" class="nav__link">Projects</a>
+            <a href="#projects" class="nav__link">Projects</a>
           </li>
           <li class="nav__item">
             <a href="#" class="nav__link">Contacts</a>
@@ -63,7 +63,7 @@
     </div>
   </section>
 
-  <section class="about u-center-block" id="about">
+  <section class="about u-container" id="about">
     <div class="u-center-text">
       <div class="u-margin-bottom-small">
         <h2 class="heading-secondary">About</h2>
@@ -74,6 +74,49 @@
         I teach myself different skills, keep up with the news in the Web industry, grow my beard, and listen to podcasts.
       </p>
     </div>
+  </section>
+
+  <section class="projects" id="projects">
+    <div class="u-center-text u-margin-bottom-small">
+      <h2 class="heading-secondary">Projects</h2>
+    </div>
+
+    <div class="project" id="podcast-tune">
+      <div class="project__wrapper u-container">
+        <div class="project__image-wrapper">
+        <img src="https://res.cloudinary.com/zimniros-spam/image/upload/v1534938783/podcast-tune_v7gjai.png" alt="Podcast Tune screenshot"
+          class="project__image">
+        </div>
+        <div class="project__info">
+          <h3 class="project__name">Podcast Tune</h3>
+          <div class="project__description">
+            <p class="paragraph">A Web application for listening and discovering podcasts.</p>
+            <p class="paragraph">Main features:</p>
+            <ul class="project__features-list">
+              <li class="project__feature">You can browse, search and subscribe to podcasts.</li>
+              <li class="project__feature">Play episodes, add them to Up next, mark them as played and add them to favorites.</li>
+              <li class="project__feature">In player you can increase/decrease volume and playback speed, skip time and browse episode in Up next.</li>
+              <li class="project__feature">For registered users all information stores in application database, for 'guests' - in local storage.</li>
+            </ul>
+            <p class="paragraph">Build with:</p>
+            <ul class="project__tools-list">
+              <li class="project__tools-item">React</li>
+              <li class="project__tools-item">Meteor</li>
+              <li class="project__tools-item">Apollo</li>
+              <li class="project__tools-item">Graphql</li>
+              <li class="project__tools-item">MongoDB</li>
+              <li class="project__tools-item">APIs</li>
+            </ul>
+
+            <div class="project__links">
+              <a href="https://podcast-tune.herokuapp.com" class="project__link project__link--live" target="_blank">Heroku</a>
+              <a href="https://github.com/Zimniros/PodcastTune" class="project__link project__link--github" target="_blank">GitHub</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
   </section>
 
   <script src="js/scripts.js"></script>
