Add Contacts section and footer.

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <a href="#projects" class="nav__link">Projects</a>
           </li>
           <li class="nav__item">
-            <a href="#" class="nav__link">Contacts</a>
+            <a href="#contacts" class="nav__link">Contacts</a>
           </li>
         </ul>
 
@@ -126,9 +126,47 @@
         </div>
       </div>
     </div>
-
   </section>
 
+
+  <section class="contacts" id="contacts">
+    <div class="u-center-text u-margin-bottom-large">
+      <h2 class="heading-secondary">Contacts</h2>
+    </div>
+    <div class="contacts__list">
+      <a href="mailto:antonzimnitski@protonmail.com" class="contacts__link" target="_blank">
+        <svg class="contacts__icon">
+          <use xlink:href="img/sprite.svg#icon-envelop"></use>
+        </svg>
+      </a>
+
+      <a href="https://www.linkedin.com/in/zimniros/" class="contacts__link" target="_blank">
+        <svg class="contacts__icon">
+          <use xlink:href="img/sprite.svg#icon-linkedin"></use>
+        </svg>
+      </a>
+      <a href="https://github.com/Zimniros/#" class="contacts__link" target="_blank">
+        <svg class="contacts__icon">
+          <use xlink:href="img/sprite.svg#icon-github"></use>
+        </svg>
+      </a>
+      <a href="https://codepen.io/Zimniros" class="contacts__link" target="_blank">
+        <svg class="contacts__icon">
+          <use xlink:href="img/sprite.svg#icon-codepen"></use>
+        </svg>
+      </a>
+      <a href="https://www.instagram.com/anton.zimnitski/" class="contacts__link" target="_blank">
+        <svg class="contacts__icon">
+          <use xlink:href="img/sprite.svg#icon-instagram"></use>
+        </svg>
+      </a>
+
+    </div>
+  </section>
+
+  <footer class="footer">
+    <p class="paragraph u-center-text">&copy; 2018 by Anton Zimnitski</p>
+  </footer>
 
   <script src="js/scripts.js"></script>
 
