Rewrite Hero section (from background-attachments: fixed to position: fixed in ::before). Fix nav bar in IE11.

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
   </header>
 
   <section class="hero" id="hero">
-    <div class="hero__text-box">
+    <div class="hero__wrapper">
       <h1 class="heading-primary">
         <span class="heading-primary--main">Anton Zimnitski</span>
         <span class="heading-primary--sub">Full-Stack Javascript Developer</span>
@@ -63,8 +63,8 @@
     </div>
   </section>
 
-  <section class="about u-container" id="about">
-    <div class="u-center-text">
+  <section class="about" id="about">
+    <div class="u-container u-center-text">
       <div class="u-margin-bottom-large">
         <h2 class="heading-secondary">About</h2>
       </div>
