Add favicon and apps icons. Add meta tags.

--- a/index.html
+++ b/index.html
@@ -5,11 +5,33 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+  <!-- Favicon & App Icon -->
+  <link rel="apple-touch-icon" sizes="57x57" href="/icons/apple-icon-57x57.png">
+  <link rel="apple-touch-icon" sizes="60x60" href="/icons/apple-icon-60x60.png">
+  <link rel="apple-touch-icon" sizes="72x72" href="/icons/apple-icon-72x72.png">
+  <link rel="apple-touch-icon" sizes="76x76" href="/icons/apple-icon-76x76.png">
+  <link rel="apple-touch-icon" sizes="114x114" href="/icons/apple-icon-114x114.png">
+  <link rel="apple-touch-icon" sizes="120x120" href="/icons/apple-icon-120x120.png">
+  <link rel="apple-touch-icon" sizes="144x144" href="/icons/apple-icon-144x144.png">
+  <link rel="apple-touch-icon" sizes="152x152" href="/icons/apple-icon-152x152.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="/icons/apple-icon-180x180.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="/icons/android-icon-192x192.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/icons/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="96x96" href="/icons/favicon-96x96.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/icons/favicon-16x16.png">
+  <link rel="manifest" href="/icons/manifest.json">
+  <meta name="msapplication-TileColor" content="#ffffff">
+  <meta name="msapplication-TileImage" content="/icons/ms-icon-144x144.png">
+  <meta name="theme-color" content="#ffffff">
+  <!-- End of Favicon & App Icon-->
+
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,800" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
   <!-- <link rel="shortcut icon" type="image/png" href="img/favicon.png"> -->
 
-  <title>Anton Zimnitski | Fullstack Javascript Developer</title>
+  <title>Anton Zimnitski | Full-Stack Javascript Developer</title>
+  <meta name="description" content="Anton Zimnitski is a Full-Stack Javascript Developer from Belarus with experience in NodeJs, React, MongoDB, Express, Meteor, and GraphQL.">
+  <meta name="keywords" content="javascript, react, node, fullstack, full-stack, web, website, webdev, Zimnitski, antonzimnitski.com">
 </head>
 
 <body>
@@ -84,12 +106,17 @@
     <div class="project" id="podcast-tune">
       <div class="project__wrapper u-container">
         <div class="project__image-wrapper">
-          <picture >
-            <source srcset="https://res.cloudinary.com/zimniros/image/upload/c_scale,q_100,w_1365/v1535017288/Portfolio/podcast-tune.png" media="(min-width: 61.25em)">
-            <source srcset="https://res.cloudinary.com/zimniros/image/upload/c_scale,q_100,w_980/v1535017288/Portfolio/podcast-tune.png" media="(min-width: 48em)">
-            <source srcset="https://res.cloudinary.com/zimniros/image/upload/c_scale,q_100,w_768/v1535019693/Portfolio/podcast-tune.png" media="(min-width: 30em)">
-            <source srcset="https://res.cloudinary.com/zimniros/image/upload/c_scale,q_100,w_480/v1535019693/Portfolio/podcast-tune.png" media="(min-width: 17.5em)">
-            <img src="https://res.cloudinary.com/zimniros/image/upload/q_100/v1535019693/Portfolio/podcast-tune.png" alt="Podcast Tune screenshot" class="project__image">
+          <picture>
+            <source srcset="https://res.cloudinary.com/zimniros/image/upload/c_scale,q_100,w_1365/v1535017288/Portfolio/podcast-tune.png"
+              media="(min-width: 61.25em)">
+            <source srcset="https://res.cloudinary.com/zimniros/image/upload/c_scale,q_100,w_980/v1535017288/Portfolio/podcast-tune.png"
+              media="(min-width: 48em)">
+            <source srcset="https://res.cloudinary.com/zimniros/image/upload/c_scale,q_100,w_768/v1535019693/Portfolio/podcast-tune.png"
+              media="(min-width: 30em)">
+            <source srcset="https://res.cloudinary.com/zimniros/image/upload/c_scale,q_100,w_480/v1535019693/Portfolio/podcast-tune.png"
+              media="(min-width: 17.5em)">
+            <img src="https://res.cloudinary.com/zimniros/image/upload/q_100/v1535019693/Portfolio/podcast-tune.png" alt="Podcast Tune screenshot"
+              class="project__image">
           </picture>
 
         </div>
@@ -173,7 +200,7 @@
   <footer class="footer">
     <p class="paragraph u-center-text">&copy; 2018 by Anton Zimnitski</p>
   </footer>
-  
+
   <script src="js/svgxuse.min.js"></script>
   <script src="js/smooth-scroll.polyfills.min.js"></script>
   <script src="js/scripts.js"></script>
