Add npm scripts. In index.html add links to minified css and js.

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <!-- End of Favicon & App Icon-->
 
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,800" rel="stylesheet">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="dist/css/style.css">
   <!-- <link rel="shortcut icon" type="image/png" href="img/favicon.png"> -->
 
   <title>Anton Zimnitski | Full-Stack Javascript Developer</title>
@@ -201,10 +201,7 @@
     <p class="paragraph u-center-text">&copy; 2018 by Anton Zimnitski</p>
   </footer>
 
-  <script src="js/svgxuse.min.js"></script>
-  <script src="js/smooth-scroll.polyfills.min.js"></script>
-  <script src="js/scripts.js"></script>
-
+  <script src="dist/js/scripts.min.js"></script>
 </body>
 
 </html>
